--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,5 +12,7 @@ jobs:
         uses: actions/checkout@v2.0.0
       - name: cd deploy directry
         run: cd /var/www/rails6webAPI/
+      - name: bundle install
+        run: bundle install --path vendor/bunlde
       - name: deploy-execute
         run: bundle exec cap production deploy
