--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,7 +2,7 @@ name: Continuous Delivery
 on:
   push:
     branches:
-      - master
+      - staging
 jobs:
   production-deploy:
     name: cap production deploy
@@ -12,6 +12,8 @@ jobs:
         uses: actions/checkout@v2.0.0
       - name: cd deploy directry
         run: cd /var/www/rails6webAPI/
+      - name: git pull
+        run: git pull origin staging
       - name: bundle install
         run: bundle install --path vendor/bunlde
       - name: deploy-execute
