--- a/.github/workflows/staging_cd.yml
+++ b/.github/workflows/staging_cd.yml
@@ -2,7 +2,7 @@ name: Continuous Delivery
 on:
   push:
     branches:
-      - master
+      - staging
 jobs:
   production-deploy:
     name: cap production deploy
@@ -12,5 +12,7 @@ jobs:
         uses: actions/checkout@v2.0.0
       - name: cd deploy directry
         run: cd /var/www/rails6webAPI/
+      - name: bundle install
+        run: bundle install --path vendor/bunlde
       - name: deploy-execute
         run: bundle exec cap production deploy
