--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v2.0.0
       - name: cd deploy directry
         run: cd /var/www/rails6webAPI/
-      - name: bundle install
-        run: bundle install --path vendor/bunlde
+      - name: change user 
+        run: sudo su - deploy
       - name: deploy-execute
         run: bundle exec cap production deploy
