--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,7 +10,5 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2.0.0
-      - name: cd deploy directry
-        run: cd /var/www/rails6webAPI/
       - name: deploy-execute
-        run: bin/cap production deploy
+        run: cd /var/www/rails6webAPI/ && bundle exec cap production deploy
