--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,5 +10,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2.0.0
+        - run: |
+          git fetch --prune --unshallow
+          git checkout master
       - name: deploy-execute
         run: cd /var/www/rails6webAPI/ && bundle exec cap production deploy
