--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,7 +10,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2.0.0
-        - run: |
+      - name: Set ref
+        run: |
           git fetch --prune --unshallow
           git checkout master
       - name: deploy-execute
