--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -10,9 +10,5 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2.0.0
-      - name: Set ref
-        run: |
-          git fetch --all
-          git checkout master
       - name: deploy-execute
-        run: cd /var/www/rails6webAPI/ && bundle exec cap production deploy
+        run: cd /var/www/rails6webAPI/ && bundle exec cap production deploy && git fetch --all
