--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,14 +1,12 @@
 name: Continuous Delivery 
 on:
   push:
-    branches:
-      - master
+    tags:
+      - staging
 jobs:
   production-deploy:
     name: cap production deploy
     runs-on: self-hosted
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2.0.0
       - name: deploy-execute
-        run: cd /var/www/rails6webAPI/ && bundle exec cap production deploy && git fetch --all && git pull
+        run: cd /var/www/rails6webAPI/ && git fetch --all && git pull && bundle exec cap production deploy
