--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,7 +1,7 @@
 name: Continuous Delivery 
 on:
   push:
-    tags:
+    branches:
       - staging_v2
 jobs:
   production-deploy:
@@ -11,4 +11,4 @@ jobs:
       - name: test
         run: echo $GITHUB_REF
       - name: deploy-execute
-        run: cd /var/www/rails6webAPI/ && git fetch --all && git pull && bundle exec cap production deploy
+        run: cd /var/www/rails6webAPI/ && git fetch --all && git $GITHUB_REF
