--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,8 +1,8 @@
 name: Continuous Delivery 
 on:
   push:
-    tags:
-      - staging
+    branches:
+      - deploy-target-branch
 jobs:
   production-deploy:
     name: cap production deploy
@@ -11,4 +11,4 @@ jobs:
       - name: test
         run: echo $GITHUB_REF
       - name: deploy-execute
-        run: cd /var/www/rails6webAPI/ && git fetch --all && git pull && bundle exec cap production deploy
+        run: cd /var/www/rails6webAPI/ && git fetch --all && echo $GITHUB_REF | sed s/\'//g | awk -F'/' '{print $3}' | xargs git checkout && bundle exec cap production deploy
