--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,13 +2,14 @@ name: Continuous Delivery
 on:
   push:
     branches:
+      # この下にdeployしたいbranchを記載する
       - deploy-target-branch
 jobs:
   production-deploy:
     name: cap production deploy
     runs-on: self-hosted
     steps:
-      - name: test
+      - name: echo target-branch
         run: echo $GITHUB_REF
       - name: deploy-execute
         run: cd /var/www/rails6webAPI/ && git fetch --all && echo $GITHUB_REF | sed s/\'//g | awk -F'/' '{print $3}' | xargs git checkout && bundle exec cap production deploy
